@@ -42,6 +42,7 @@ import org.elasticsearch.common.collect.MapBuilder;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.xcontent.XContentFactory;
 import org.elasticsearch.index.query.MatchAllQueryBuilder;
+import org.hamcrest.CoreMatchers;
 import org.hamcrest.Matchers;
 import org.hamcrest.core.Is;
 import org.junit.After;
@@ -1791,6 +1792,25 @@ public class PartitionedTableIntegrationTest extends SQLTransportIntegrationTest
         waitNoPendingTasksOnAll();
         execute("select count(*), job_id, arbitrary(name) from sys.operations_log where name='fetch' group by 2");
         assertThat(response.rowCount(), is(lessThanOrEqualTo(1L)));
+    }
+
+
+    @Test
+    public void testDeleteOrphanedPartitions() throws Throwable {
+        execute("create table foo (name string, p string) partitioned by (p) with (number_of_replicas=0, refresh_interval = 0)");
+        ensureYellow();
+        execute("insert into foo (name, p) values (?, ?)", new Object[]{"Marvin", 1});
+        execute("refresh table foo");
+
+        String templateName = PartitionName.templateName(null, "foo");
+        client().admin().indices().prepareDeleteTemplate(templateName).execute().actionGet();
+        waitNoPendingTasksOnAll();
+        execute("select * from sys.shards where table_name = 'foo'");
+        assertThat(response.rowCount(), CoreMatchers.is(5L));
+        execute("drop table foo");
+
+        execute("select * from sys.shards where table_name = 'foo'");
+        assertThat(response.rowCount(), CoreMatchers.is(0L));
     }
 
     @After
